--- a/views/part/header.handlebars
+++ b/views/part/header.handlebars
@@ -1,7 +1,3 @@
 <header>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/help">Help</a>
-    </nav>
+    <h1>LOGO</h1>
 </header>
