--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,25 +1,36 @@
 {{> header }}
+{{>nav}}
 
-<h1>{{title}}</h1>
+<h1 class="title">{{title}}</h1>
 
 <p>{{error}}</p>
-<div class="container">
-    <form action="/register" method="POST">
-        <div>
+<div class="page-wrapper">
+  <div class="wrapper">
+    <div class="wrapper-inner">
+      <form action="/login" method="POST" class="form">
+        <div class="input-wrapper">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required> 
         </div>
-        <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>  
+        <div class="input-wrapper">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
         </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required> 
+        <div class="input-wrapper">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required>
         </div>
         <button type="submit">Register</button>
-    </form>
-<a href="/login">Login</a>
+      </form>
+    </div>
+  </div>
+    <div class="wrapper">
+        <div class="wrapper-inner">
+            <div class="login-wrapper-inside">
+            <button onclick="location.href='/login'" >Login here</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 {{>footer}}
