--- a/views/part/nav.handlebars
+++ b/views/part/nav.handlebars
@@ -3,4 +3,5 @@
         <a href="/">Home</a>
         <a href="/login">Login</a>
         <a href="/register">Register</a>
+        <a href="/contact">Contact US</a>
     </nav>
